Zenodo -> Github & Zenodo for the publisher

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: cfbdeeb384aa3822604f8d6ed7b9c3719cae1260
+% Commit: 0e62a096affcfa4a9c84661e7c330a665daee379
 % Date: 2023-11-16
 % ---------------------------
 
@@ -3143,22 +3143,6 @@
 }
 @article{balan.tudor:10:stochastic,
   author        = {Balan, Raluca M. and Tudor, Ciprian A.},
-  title         = {The stochastic wave equation with fractional noise: a random field approach},
-  journal       = {Stochastic Process. Appl.},
-  fjournal      = {Stochastic Processes and their Applications},
-  volume        = {120},
-  year          = {2010},
-  number        = {12},
-  pages         = {2468--2494},
-  issn          = {0304-4149},
-  mrclass       = {60H15 (60G60 60H05)},
-  mrnumber      = {2728174},
-  mrreviewer    = {Llu\'{i}s Quer-Sardanyons},
-  doi           = {10.1016/j.spa.2010.08.006},
-  url           = {https://doi.org/10.1016/j.spa.2010.08.006}
-}
-@article{balan.tudor:10:stochastic*1,
-  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
   title         = {Stochastic heat equation with multiplicative fractional-colored noise},
   journal       = {J. Theoret. Probab.},
   fjournal      = {Journal of Theoretical Probability},
@@ -3172,6 +3156,22 @@
   mrreviewer    = {David Nualart},
   doi           = {10.1007/s10959-009-0237-3},
   url           = {https://doi.org/10.1007/s10959-009-0237-3}
+}
+@article{balan.tudor:10:stochastic*1,
+  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
+  title         = {The stochastic wave equation with fractional noise: a random field approach},
+  journal       = {Stochastic Process. Appl.},
+  fjournal      = {Stochastic Processes and their Applications},
+  volume        = {120},
+  year          = {2010},
+  number        = {12},
+  pages         = {2468--2494},
+  issn          = {0304-4149},
+  mrclass       = {60H15 (60G60 60H05)},
+  mrnumber      = {2728174},
+  mrreviewer    = {Llu\'{i}s Quer-Sardanyons},
+  doi           = {10.1016/j.spa.2010.08.006},
+  url           = {https://doi.org/10.1016/j.spa.2010.08.006}
 }
 @article{balan.yuan:22:spatial,
   author        = {Balan, Raluca M. and Yuan, Wangjun},
@@ -4319,10 +4319,9 @@
   year          = {2021},
   number        = {2},
   pages         = {209--218},
-  issn          = {1526-7555,2163-4548},
+  issn          = {1526-7555},
   mrclass       = {60H10 (60G51 91G30)},
   mrnumber      = {4273497},
-  mrreviewer    = {Christel\ Geiss},
   doi           = {10.4310/CIS.2021.v21.n2.a2},
   url           = {https://doi.org/10.4310/CIS.2021.v21.n2.a2}
 }
@@ -4335,9 +4334,10 @@
   year          = {2021},
   number        = {2},
   pages         = {209--218},
-  issn          = {1526-7555},
+  issn          = {1526-7555,2163-4548},
   mrclass       = {60H10 (60G51 91G30)},
   mrnumber      = {4273497},
+  mrreviewer    = {Christel\ Geiss},
   doi           = {10.4310/CIS.2021.v21.n2.a2},
   url           = {https://doi.org/10.4310/CIS.2021.v21.n2.a2}
 }
@@ -7790,21 +7790,6 @@
 }
 @article{borodin.corwin.ea:15:spectral,
   author        = {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and Sasamoto, Tomohiro},
-  title         = {Spectral theory for interacting particle systems solvable by coordinate {B}ethe ansatz},
-  journal       = {Comm. Math. Phys.},
-  fjournal      = {Communications in Mathematical Physics},
-  volume        = {339},
-  year          = {2015},
-  number        = {3},
-  pages         = {1167--1245},
-  issn          = {0010-3616},
-  mrclass       = {82B23 (81R12)},
-  mrnumber      = {3385995},
-  doi           = {10.1007/s00220-015-2424-7},
-  url           = {https://doi.org/10.1007/s00220-015-2424-7}
-}
-@article{borodin.corwin.ea:15:spectral*1,
-  author        = {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and Sasamoto, Tomohiro},
   title         = {Spectral theory for the {$q$}-{B}oson particle system},
   journal       = {Compos. Math.},
   fjournal      = {Compositio Mathematica},
@@ -7817,6 +7802,21 @@
   mrnumber      = {3305308},
   doi           = {10.1112/S0010437X14007532},
   url           = {https://doi.org/10.1112/S0010437X14007532}
+}
+@article{borodin.corwin.ea:15:spectral*1,
+  author        = {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and Sasamoto, Tomohiro},
+  title         = {Spectral theory for interacting particle systems solvable by coordinate {B}ethe ansatz},
+  journal       = {Comm. Math. Phys.},
+  fjournal      = {Communications in Mathematical Physics},
+  volume        = {339},
+  year          = {2015},
+  number        = {3},
+  pages         = {1167--1245},
+  issn          = {0010-3616},
+  mrclass       = {82B23 (81R12)},
+  mrnumber      = {3385995},
+  doi           = {10.1007/s00220-015-2424-7},
+  url           = {https://doi.org/10.1007/s00220-015-2424-7}
 }
 @article{borodin.corwin.ea:16:observables,
   author        = {Borodin, Alexei and Corwin, Ivan and Gorin, Vadim and Shakirov, Shamil},
@@ -11465,23 +11465,7 @@
   mrnumber      = {1956220},
   mrreviewer    = {Jerzy\ Kaczorowski}
 }
-@incollection{bourgain:02:on*3,
-  author        = {Bourgain, J.},
-  title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential. {II}},
-  note          = {Dedicated to the memory of Tom Wolff},
-  journal       = {J. Anal. Math.},
-  fjournal      = {Journal d'Analyse Math\'{e}matique},
-  volume        = {88},
-  year          = {2002},
-  pages         = {221--254},
-  issn          = {0021-7670,1565-8538},
-  mrclass       = {47B39 (47A10 47N55 81Q10 82B44)},
-  mrnumber      = {1984594},
-  mrreviewer    = {David\ Damanik},
-  doi           = {10.1007/BF02786578},
-  url           = {https://doi.org/10.1007/BF02786578}
-}
-@article{bourgain:02:on*4,
+@article{bourgain:02:on*3,
   author        = {Bourgain, Jean},
   title         = {On the global {C}auchy problem for the nonlinear {S}chr\"{o}dinger equation},
   journal       = {Proc. Natl. Acad. Sci. USA},
@@ -11496,6 +11480,22 @@
   mrreviewer    = {Victor\ V.\ Zharinov},
   doi           = {10.1073/pnas.222494399},
   url           = {https://doi.org/10.1073/pnas.222494399}
+}
+@incollection{bourgain:02:on*4,
+  author        = {Bourgain, J.},
+  title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential. {II}},
+  note          = {Dedicated to the memory of Tom Wolff},
+  journal       = {J. Anal. Math.},
+  fjournal      = {Journal d'Analyse Math\'{e}matique},
+  volume        = {88},
+  year          = {2002},
+  pages         = {221--254},
+  issn          = {0021-7670,1565-8538},
+  mrclass       = {47B39 (47A10 47N55 81Q10 82B44)},
+  mrnumber      = {1984594},
+  mrreviewer    = {David\ Damanik},
+  doi           = {10.1007/BF02786578},
+  url           = {https://doi.org/10.1007/BF02786578}
 }
 @article{bourgain:02:on*5,
   author        = {Bourgain, Jean},
@@ -12396,7 +12396,23 @@
   doi           = {10.1134/s0081543813010045},
   url           = {https://doi.org/10.1134/s0081543813010045}
 }
-@incollection{bourgain:13:on*1,
+@article{bourgain:13:on*1,
+  author        = {Bourgain, J.},
+  title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {197},
+  year          = {2013},
+  number        = {1},
+  pages         = {215--235},
+  issn          = {0021-2172,1565-8511},
+  mrclass       = {11F30},
+  mrnumber      = {3096614},
+  mrreviewer    = {Gergely\ Harcos},
+  doi           = {10.1007/s11856-013-0002-2},
+  url           = {https://doi.org/10.1007/s11856-013-0002-2}
+}
+@incollection{bourgain:13:on*2,
   author        = {Bourgain, J.},
   title         = {On the {L}yapunov exponents of {S}chr\"{o}dinger operators associated with the standard map},
   booktitle     = {Asymptotic geometric analysis},
@@ -12412,7 +12428,7 @@
   doi           = {10.1007/978-1-4614-6406-8\_3},
   url           = {https://doi.org/10.1007/978-1-4614-6406-8_3}
 }
-@article{bourgain:13:on*2,
+@article{bourgain:13:on*3,
   author        = {Bourgain, J.},
   title         = {On the correlation of the {M}oebius function with rank-one systems},
   journal       = {J. Anal. Math.},
@@ -12426,22 +12442,6 @@
   mrreviewer    = {Giulio\ Tiozzo},
   doi           = {10.1007/s11854-013-0016-z},
   url           = {https://doi.org/10.1007/s11854-013-0016-z}
-}
-@article{bourgain:13:on*3,
-  author        = {Bourgain, J.},
-  title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {197},
-  year          = {2013},
-  number        = {1},
-  pages         = {215--235},
-  issn          = {0021-2172,1565-8511},
-  mrclass       = {11F30},
-  mrnumber      = {3096614},
-  mrreviewer    = {Gergely\ Harcos},
-  doi           = {10.1007/s11856-013-0002-2},
-  url           = {https://doi.org/10.1007/s11856-013-0002-2}
 }
 @article{bourgain:13:prescribing,
   author        = {Bourgain, Jean},
@@ -12519,23 +12519,7 @@
   mrnumber      = {3329846},
   mrreviewer    = {Brett\ D.\ Wick}
 }
-@article{bourgain:14:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On the {H}ardy-{L}ittlewood maximal function for the cube},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {203},
-  year          = {2014},
-  number        = {1},
-  pages         = {275--293},
-  issn          = {0021-2172,1565-8511},
-  mrclass       = {42B25},
-  mrnumber      = {3273441},
-  mrreviewer    = {Javier\ P\'{e}rez L\'{a}zaro},
-  doi           = {10.1007/s11856-014-1059-2},
-  url           = {https://doi.org/10.1007/s11856-014-1059-2}
-}
-@incollection{bourgain:14:on*2,
+@incollection{bourgain:14:on*1,
   author        = {Bourgain, Jean},
   title         = {On eigenvalue spacings for the 1-{D} {A}nderson model with singular site distribution},
   booktitle     = {Geometric aspects of functional analysis},
@@ -12550,6 +12534,22 @@
   mrreviewer    = {Michael\ A.\ Perelmuter},
   doi           = {10.1007/978-3-319-09477-9\_6},
   url           = {https://doi.org/10.1007/978-3-319-09477-9_6}
+}
+@article{bourgain:14:on*2,
+  author        = {Bourgain, Jean},
+  title         = {On the {H}ardy-{L}ittlewood maximal function for the cube},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {203},
+  year          = {2014},
+  number        = {1},
+  pages         = {275--293},
+  issn          = {0021-2172,1565-8511},
+  mrclass       = {42B25},
+  mrnumber      = {3273441},
+  mrreviewer    = {Javier\ P\'{e}rez L\'{a}zaro},
+  doi           = {10.1007/s11856-014-1059-2},
+  url           = {https://doi.org/10.1007/s11856-014-1059-2}
 }
 @incollection{bourgain:14:on*3,
   author        = {Bourgain, Jean},
@@ -13919,33 +13919,6 @@
 }
 @article{bourgain:84:on,
   author        = {Bourgain, J.},
-  title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
-  journal       = {Math. Nachr.},
-  fjournal      = {Mathematische Nachrichten},
-  volume        = {119},
-  year          = {1984},
-  pages         = {41--53},
-  issn          = {0025-584X,1522-2616},
-  mrclass       = {47B37 (44A15 46B20 60G46)},
-  mrnumber      = {774175},
-  mrreviewer    = {D.\ L.\ Burkholder},
-  doi           = {10.1002/mana.19841190104},
-  url           = {https://doi.org/10.1002/mana.19841190104}
-}
-@inproceedings{bourgain:84:on*1,
-  author        = {Bourgain, J.},
-  title         = {On nonisomorphisms of algebras of analytic functions},
-  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
-  series        = {Teubner-Texte Math.},
-  volume        = {67},
-  pages         = {145--154},
-  publisher     = {Teubner, Leipzig},
-  year          = {1984},
-  mrclass       = {46J15 (32E25)},
-  mrnumber      = {763536}
-}
-@article{bourgain:84:on*2,
-  author        = {Bourgain, J.},
   title         = {On bases in the disc algebra},
   journal       = {Trans. Amer. Math. Soc.},
   fjournal      = {Transactions of the American Mathematical Society},
@@ -13959,6 +13932,33 @@
   mrreviewer    = {Jacques\ Mayer},
   doi           = {10.2307/1999476},
   url           = {https://doi.org/10.2307/1999476}
+}
+@article{bourgain:84:on*1,
+  author        = {Bourgain, J.},
+  title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
+  journal       = {Math. Nachr.},
+  fjournal      = {Mathematische Nachrichten},
+  volume        = {119},
+  year          = {1984},
+  pages         = {41--53},
+  issn          = {0025-584X,1522-2616},
+  mrclass       = {47B37 (44A15 46B20 60G46)},
+  mrnumber      = {774175},
+  mrreviewer    = {D.\ L.\ Burkholder},
+  doi           = {10.1002/mana.19841190104},
+  url           = {https://doi.org/10.1002/mana.19841190104}
+}
+@inproceedings{bourgain:84:on*2,
+  author        = {Bourgain, J.},
+  title         = {On nonisomorphisms of algebras of analytic functions},
+  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
+  series        = {Teubner-Texte Math.},
+  volume        = {67},
+  pages         = {145--154},
+  publisher     = {Teubner, Leipzig},
+  year          = {1984},
+  mrclass       = {46J15 (32E25)},
+  mrnumber      = {763536}
 }
 @incollection{bourgain:84:propriete,
   author        = {Bourgain, Jean},
@@ -14073,21 +14073,6 @@
   mrnumber      = {832256}
 }
 @article{bourgain:85:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On finitely generated closed ideals in {$H^infty(D)$}},
-  journal       = {Ann. Inst. Fourier (Grenoble)},
-  fjournal      = {Universit\'{e} de Grenoble. Annales de l'Institut Fourier},
-  volume        = {35},
-  year          = {1985},
-  number        = {4},
-  pages         = {163--174},
-  issn          = {0373-0956,1777-5310},
-  mrclass       = {46J15 (30H05 46J20)},
-  mrnumber      = {812323},
-  mrreviewer    = {Richard\ Rochberg},
-  url           = {http://www.numdam.org/item?id=AIF_1985__35_4_163_0}
-}
-@article{bourgain:85:on*2,
   author        = {Bourgain, J.},
   title         = {On {L}ipschitz embedding of finite metric spaces in {H}ilbert space},
   journal       = {Israel J. Math.},
@@ -14103,7 +14088,7 @@
   doi           = {10.1007/BF02776078},
   url           = {https://doi.org/10.1007/BF02776078}
 }
-@article{bourgain:85:on*3,
+@article{bourgain:85:on*2,
   author        = {Bourgain, J.},
   title         = {On square functions on the trigonometric system},
   journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
@@ -14116,6 +14101,21 @@
   mrclass       = {42A50 (42A45)},
   mrnumber      = {847119},
   mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
+}
+@article{bourgain:85:on*3,
+  author        = {Bourgain, Jean},
+  title         = {On finitely generated closed ideals in {$H^infty(D)$}},
+  journal       = {Ann. Inst. Fourier (Grenoble)},
+  fjournal      = {Universit\'{e} de Grenoble. Annales de l'Institut Fourier},
+  volume        = {35},
+  year          = {1985},
+  number        = {4},
+  pages         = {163--174},
+  issn          = {0373-0956,1777-5310},
+  mrclass       = {46J15 (30H05 46J20)},
+  mrnumber      = {812323},
+  mrreviewer    = {Richard\ Rochberg},
+  url           = {http://www.numdam.org/item?id=AIF_1985__35_4_163_0}
 }
 @article{bourgain:85:sidon,
   author        = {Bourgain, Jean},
@@ -14422,23 +14422,7 @@
   doi           = {10.1007/BFb0078144},
   url           = {https://doi.org/10.1007/BFb0078144}
 }
-@article{bourgain:87:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the {H}ausdorff dimension of harmonic measure in higher dimension},
-  journal       = {Invent. Math.},
-  fjournal      = {Inventiones Mathematicae},
-  volume        = {87},
-  year          = {1987},
-  number        = {3},
-  pages         = {477--483},
-  issn          = {0020-9910,1432-1297},
-  mrclass       = {31A15},
-  mrnumber      = {874032},
-  mrreviewer    = {J.\ Siciak},
-  doi           = {10.1007/BF01389238},
-  url           = {https://doi.org/10.1007/BF01389238}
-}
-@incollection{bourgain:87:on*2,
+@incollection{bourgain:87:on*1,
   author        = {Bourgain, J.},
   title         = {On lattice packing of convex symmetric sets in {${\bf R}^n$}},
   booktitle     = {Geometrical aspects of functional analysis (1985/86)},
@@ -14453,6 +14437,22 @@
   mrreviewer    = {J.\ M.\ Wills},
   doi           = {10.1007/BFb0078132},
   url           = {https://doi.org/10.1007/BFb0078132}
+}
+@article{bourgain:87:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the {H}ausdorff dimension of harmonic measure in higher dimension},
+  journal       = {Invent. Math.},
+  fjournal      = {Inventiones Mathematicae},
+  volume        = {87},
+  year          = {1987},
+  number        = {3},
+  pages         = {477--483},
+  issn          = {0020-9910,1432-1297},
+  mrclass       = {31A15},
+  mrnumber      = {874032},
+  mrreviewer    = {J.\ Siciak},
+  doi           = {10.1007/BF01389238},
+  url           = {https://doi.org/10.1007/BF01389238}
 }
 @article{bourgain:87:on*3,
   author        = {Bourgain, Jean},
@@ -14567,22 +14567,6 @@
 }
 @article{bourgain:88:on,
   author        = {Bourgain, J.},
-  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {61},
-  year          = {1988},
-  number        = {1},
-  pages         = {73--84},
-  issn          = {0021-2172},
-  mrclass       = {28D05},
-  mrnumber      = {937582},
-  mrreviewer    = {Alberto\ de la Torre},
-  doi           = {10.1007/BF02776302},
-  url           = {https://doi.org/10.1007/BF02776302}
-}
-@article{bourgain:88:on*1,
-  author        = {Bourgain, J.},
   title         = {On the maximal ergodic theorem for certain subsets of the integers},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14597,7 +14581,7 @@
   doi           = {10.1007/BF02776301},
   url           = {https://doi.org/10.1007/BF02776301}
 }
-@incollection{bourgain:88:on*2,
+@incollection{bourgain:88:on*1,
   author        = {Bourgain, J.},
   title         = {On finite-dimensional homogeneous {B}anach spaces},
   booktitle     = {Geometric aspects of functional analysis (1986/87)},
@@ -14612,6 +14596,22 @@
   mrreviewer    = {T.\ Figiel},
   doi           = {10.1007/BFb0081744},
   url           = {https://doi.org/10.1007/BFb0081744}
+}
+@article{bourgain:88:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {61},
+  year          = {1988},
+  number        = {1},
+  pages         = {73--84},
+  issn          = {0021-2172},
+  mrclass       = {28D05},
+  mrnumber      = {937582},
+  mrreviewer    = {Alberto\ de la Torre},
+  doi           = {10.1007/BF02776302},
+  url           = {https://doi.org/10.1007/BF02776302}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -14894,23 +14894,7 @@
   doi           = {10.1007/BFb0089219},
   url           = {https://doi.org/10.1007/BFb0089219}
 }
-@incollection{bourgain:91:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
-  booktitle     = {Geometric aspects of functional analysis (1989--90)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1469},
-  pages         = {179--191},
-  publisher     = {Springer, Berlin},
-  year          = {1991},
-  isbn          = {3-540-54024-5},
-  mrclass       = {42B15 (42B25 46E30)},
-  mrnumber      = {1122623},
-  mrreviewer    = {Peter\ I.\ Lizorkin},
-  doi           = {10.1007/BFb0089225},
-  url           = {https://doi.org/10.1007/BFb0089225}
-}
-@article{bourgain:91:on*2,
+@article{bourgain:91:on*1,
   author        = {Bourgain, J.},
   title         = {On the {B}usemann-{P}etty problem for perturbations of the ball},
   journal       = {Geom. Funct. Anal.},
@@ -14925,6 +14909,22 @@
   mrreviewer    = {W.\ J.\ Firey},
   doi           = {10.1007/BF01895416},
   url           = {https://doi.org/10.1007/BF01895416}
+}
+@incollection{bourgain:91:on*2,
+  author        = {Bourgain, Jean},
+  title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
+  booktitle     = {Geometric aspects of functional analysis (1989--90)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1469},
+  pages         = {179--191},
+  publisher     = {Springer, Berlin},
+  year          = {1991},
+  isbn          = {3-540-54024-5},
+  mrclass       = {42B15 (42B25 46E30)},
+  mrnumber      = {1122623},
+  mrreviewer    = {Peter\ I.\ Lizorkin},
+  doi           = {10.1007/BFb0089225},
+  url           = {https://doi.org/10.1007/BFb0089225}
 }
 @incollection{bourgain:91:remarks,
   author        = {Bourgain, J.},
@@ -15679,21 +15679,6 @@
 }
 @article{bourgain:99:on,
   author        = {Bourgain, J.},
-  title         = {On growth of {S}obolev norms in linear {S}chr\"{o}dinger equations with smooth time dependent potential},
-  journal       = {J. Anal. Math.},
-  fjournal      = {Journal d'Analyse Math\'{e}matique},
-  volume        = {77},
-  year          = {1999},
-  pages         = {315--348},
-  issn          = {0021-7670,1565-8538},
-  mrclass       = {35J10 (35B10 35K40 47N20)},
-  mrnumber      = {1753490},
-  mrreviewer    = {C.\ Eugene\ Wayne},
-  doi           = {10.1007/BF02791265},
-  url           = {https://doi.org/10.1007/BF02791265}
-}
-@article{bourgain:99:on*1,
-  author        = {Bourgain, J.},
   title         = {On the dimension of {K}akeya sets and related maximal inequalities},
   journal       = {Geom. Funct. Anal.},
   fjournal      = {Geometric and Functional Analysis},
@@ -15707,6 +15692,21 @@
   mrreviewer    = {Andreas\ Seeger},
   doi           = {10.1007/s000390050087},
   url           = {https://doi.org/10.1007/s000390050087}
+}
+@article{bourgain:99:on*1,
+  author        = {Bourgain, J.},
+  title         = {On growth of {S}obolev norms in linear {S}chr\"{o}dinger equations with smooth time dependent potential},
+  journal       = {J. Anal. Math.},
+  fjournal      = {Journal d'Analyse Math\'{e}matique},
+  volume        = {77},
+  year          = {1999},
+  pages         = {315--348},
+  issn          = {0021-7670,1565-8538},
+  mrclass       = {35J10 (35B10 35K40 47N20)},
+  mrnumber      = {1753490},
+  mrreviewer    = {C.\ Eugene\ Wayne},
+  doi           = {10.1007/BF02791265},
+  url           = {https://doi.org/10.1007/BF02791265}
 }
 @article{bourgain:99:on*2,
   author        = {Bourgain, J.},
@@ -21380,21 +21380,21 @@
   doi           = {10.1214/19-AIHP983},
   url           = {https://doi.org/10.1214/19-AIHP983}
 }
-@misc{chen:23:some,
+@book{chen:23:some,
   author        = {Le Chen},
   title         = {Some symbolic tools for the Fox {$H$}-function},
   month         = nov,
   year          = 2023,
-  publisher     = {Zenodo},
+  publisher     = {GitHub \& Zenodo},
   doi           = {10.5281/zenodo.10143785},
   url           = {https://doi.org/10.5281/zenodo.10143785}
 }
-@misc{chen:23:spdes-bib,
+@book{chen:23:spdes-bib,
   author        = {Le Chen},
   title         = {{SPDEs-Bib}: A Comprehensive Bibliography of Stochastic Partial Differential Equations and Related Topics},
   month         = nov,
   year          = 2023,
-  publisher     = {Zenodo},
+  publisher     = {GitHub \& Zenodo},
   doi           = {10.5281/zenodo.10143431},
   url           = {https://doi.org/10.5281/zenodo.10143431}
 }
@@ -25309,21 +25309,6 @@
 }
 @article{david.duplantier.ea:93:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
-  title         = {Renormalization theory for interacting crumpled manifolds},
-  journal       = {Nuclear Phys. B},
-  fjournal      = {Nuclear Physics. B. Theoretical, Phenomenological, and Experimental High Energy Physics. Quantum Field Theory and Statistical Systems},
-  volume        = {394},
-  year          = {1993},
-  number        = {3},
-  pages         = {555--664},
-  issn          = {0550-3213},
-  mrclass       = {82B28 (81T17 81T30 82D60)},
-  mrnumber      = {1215176},
-  doi           = {10.1016/0550-3213(93)90226-F},
-  url           = {https://doi.org/10.1016/0550-3213(93)90226-F}
-}
-@article{david.duplantier.ea:93:renormalization*1,
-  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
   title         = {Renormalization of crumpled manifolds},
   journal       = {Phys. Rev. Lett.},
   fjournal      = {Physical Review Letters},
@@ -25336,6 +25321,21 @@
   mrnumber      = {1214561},
   doi           = {10.1103/PhysRevLett.70.2205},
   url           = {https://doi.org/10.1103/PhysRevLett.70.2205}
+}
+@article{david.duplantier.ea:93:renormalization*1,
+  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
+  title         = {Renormalization theory for interacting crumpled manifolds},
+  journal       = {Nuclear Phys. B},
+  fjournal      = {Nuclear Physics. B. Theoretical, Phenomenological, and Experimental High Energy Physics. Quantum Field Theory and Statistical Systems},
+  volume        = {394},
+  year          = {1993},
+  number        = {3},
+  pages         = {555--664},
+  issn          = {0550-3213},
+  mrclass       = {82B28 (81T17 81T30 82D60)},
+  mrnumber      = {1215176},
+  doi           = {10.1016/0550-3213(93)90226-F},
+  url           = {https://doi.org/10.1016/0550-3213(93)90226-F}
 }
 @article{david.duplantier.ea:94:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
@@ -52451,22 +52451,6 @@
 }
 @article{nourdin.simon:06:on,
   author        = {Nourdin, Ivan and Simon, Thomas},
-  title         = {On the absolute continuity of one-dimensional {SDE}s driven by a fractional {B}rownian motion},
-  journal       = {Statist. Probab. Lett.},
-  fjournal      = {Statistics \& Probability Letters},
-  volume        = {76},
-  year          = {2006},
-  number        = {9},
-  pages         = {907--912},
-  issn          = {0167-7152},
-  mrclass       = {60G18 (60H10)},
-  mrnumber      = {2268434},
-  mrreviewer    = {Andreas Neuenkirch},
-  doi           = {10.1016/j.spl.2005.10.021},
-  url           = {https://doi.org/10.1016/j.spl.2005.10.021}
-}
-@article{nourdin.simon:06:on*1,
-  author        = {Nourdin, Ivan and Simon, Thomas},
   title         = {On the absolute continuity of {L}\'{e}vy processes with drift},
   journal       = {Ann. Probab.},
   fjournal      = {The Annals of Probability},
@@ -52480,6 +52464,22 @@
   mrreviewer    = {Tina M. Marquardt},
   doi           = {10.1214/009117905000000620},
   url           = {https://doi.org/10.1214/009117905000000620}
+}
+@article{nourdin.simon:06:on*1,
+  author        = {Nourdin, Ivan and Simon, Thomas},
+  title         = {On the absolute continuity of one-dimensional {SDE}s driven by a fractional {B}rownian motion},
+  journal       = {Statist. Probab. Lett.},
+  fjournal      = {Statistics \& Probability Letters},
+  volume        = {76},
+  year          = {2006},
+  number        = {9},
+  pages         = {907--912},
+  issn          = {0167-7152},
+  mrclass       = {60G18 (60H10)},
+  mrnumber      = {2268434},
+  mrreviewer    = {Andreas Neuenkirch},
+  doi           = {10.1016/j.spl.2005.10.021},
+  url           = {https://doi.org/10.1016/j.spl.2005.10.021}
 }
 @article{nourdin.simon:07:correcting,
   author        = {Nourdin, Ivan and Simon, Thomas},
@@ -56264,7 +56264,20 @@
   mrnumber      = {1915445},
   mrreviewer    = {Anton Wakolbinger}
 }
-@article{perkins:82:local,
+@incollection{perkins:82:local,
+  author        = {Perkins, Edwin},
+  title         = {Local time and pathwise uniqueness for stochastic differential equations},
+  booktitle     = {Seminar on {P}robability, {XVI}},
+  series        = {Lecture Notes in Math.},
+  volume        = {920},
+  pages         = {201--208},
+  publisher     = {Springer, Berlin-New York},
+  year          = {1982},
+  mrclass       = {60H10},
+  mrnumber      = {658680},
+  mrreviewer    = {Toshio Yamada}
+}
+@article{perkins:82:local*1,
   author        = {Perkins, Edwin},
   title         = {Local time is a semimartingale},
   journal       = {Z. Wahrsch. Verw. Gebiete},
@@ -56279,19 +56292,6 @@
   mrreviewer    = {E. \c{C}inlar},
   doi           = {10.1007/BF01957098},
   url           = {https://doi.org/10.1007/BF01957098}
-}
-@incollection{perkins:82:local*1,
-  author        = {Perkins, Edwin},
-  title         = {Local time and pathwise uniqueness for stochastic differential equations},
-  booktitle     = {Seminar on {P}robability, {XVI}},
-  series        = {Lecture Notes in Math.},
-  volume        = {920},
-  pages         = {201--208},
-  publisher     = {Springer, Berlin-New York},
-  year          = {1982},
-  mrclass       = {60H10},
-  mrnumber      = {658680},
-  mrreviewer    = {Toshio Yamada}
 }
 @article{peszat.tindel:10:stochastic,
   author        = {Peszat, Szymon and Tindel, Samy},
@@ -59280,19 +59280,6 @@
 }
 @article{salins:22:global,
   author        = {Salins, Michael},
-  title         = {Global solutions for the stochastic reaction-diffusion equation with super-linear multiplicative noise and strong dissipativity},
-  journal       = {Electron. J. Probab.},
-  fjournal      = {Electronic Journal of Probability},
-  volume        = {27},
-  year          = {2022},
-  pages         = {Paper No. 12, 17},
-  mrclass       = {60H15 (35R60)},
-  mrnumber      = {4372099},
-  doi           = {10.1214/22-ejp740},
-  url           = {https://doi.org/10.1214/22-ejp740}
-}
-@article{salins:22:global*1,
-  author        = {Salins, Michael},
   title         = {Global solutions to the stochastic reaction-diffusion equation with superlinear accretive reaction term and superlinear multiplicative noise term on a bounded spatial domain},
   journal       = {Trans. Amer. Math. Soc.},
   fjournal      = {Transactions of the American Mathematical Society},
@@ -59305,6 +59292,19 @@
   mrnumber      = {4491446},
   doi           = {10.1090/tran/8763},
   url           = {https://doi.org/10.1090/tran/8763}
+}
+@article{salins:22:global*1,
+  author        = {Salins, Michael},
+  title         = {Global solutions for the stochastic reaction-diffusion equation with super-linear multiplicative noise and strong dissipativity},
+  journal       = {Electron. J. Probab.},
+  fjournal      = {Electronic Journal of Probability},
+  volume        = {27},
+  year          = {2022},
+  pages         = {Paper No. 12, 17},
+  mrclass       = {60H15 (35R60)},
+  mrnumber      = {4372099},
+  doi           = {10.1214/22-ejp740},
+  url           = {https://doi.org/10.1214/22-ejp740}
 }
 @incollection{saloff-coste:10:heat,
   author        = {Saloff-Coste, Laurent},
@@ -62246,6 +62246,20 @@
 }
 @book{talagrand:11:mean,
   author        = {Talagrand, Michel},
+  title         = {Mean field models for spin glasses. {V}olume {II}},
+  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
+  volume        = {55},
+  note          = {Advanced replica-symmetry and low temperature},
+  publisher     = {Springer, Heidelberg},
+  year          = {2011},
+  pages         = {xii+629},
+  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
+  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
+  mrnumber      = {3024566},
+  mrreviewer    = {Francis Comets}
+}
+@book{talagrand:11:mean*1,
+  author        = {Talagrand, Michel},
   title         = {Mean field models for spin glasses. {V}olume {I}},
   series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
   volume        = {54},
@@ -62259,20 +62273,6 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/978-3-642-15202-3},
   url           = {https://doi.org/10.1007/978-3-642-15202-3}
-}
-@book{talagrand:11:mean*1,
-  author        = {Talagrand, Michel},
-  title         = {Mean field models for spin glasses. {V}olume {II}},
-  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
-  volume        = {55},
-  note          = {Advanced replica-symmetry and low temperature},
-  publisher     = {Springer, Heidelberg},
-  year          = {2011},
-  pages         = {xii+629},
-  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
-  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
-  mrnumber      = {3024566},
-  mrreviewer    = {Francis Comets}
 }
 @article{talagrand:94:sharper,
   author        = {Talagrand, M.},
@@ -66287,7 +66287,7 @@
   author        = {Zabczyk, Jerzy},
   title         = {Mathematical control theory---an introduction},
   series        = {Systems \& Control: Foundations \& Applications},
-  edition       = {Second},
+  note          = {Second edition [of 2348543]},
   publisher     = {Birkh\"{a}user/Springer, Cham},
   year          = {[2020] \copyright 2020},
   pages         = {xxvi+336},
@@ -66301,7 +66301,7 @@
   author        = {Zabczyk, Jerzy},
   title         = {Mathematical control theory---an introduction},
   series        = {Systems \& Control: Foundations \& Applications},
-  note          = {Second edition [of 2348543]},
+  edition       = {Second},
   publisher     = {Birkh\"{a}user/Springer, Cham},
   year          = {[2020] \copyright 2020},
   pages         = {xxvi+336},
